// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creates node 1`] = `
Object {
  "data": Object {
    "person": Object {
      "name": "Tim",
    },
  },
}
`;

exports[`creates node linked to existing nodes 1`] = `
Object {
  "data": Object {
    "createPerson": Object {
      "person": Object {
        "name": "David",
        "parents": Array [
          Object {
            "name": "Linda",
          },
          Object {
            "name": "Matthew",
          },
        ],
      },
    },
  },
}
`;

exports[`creates node with nested node 1`] = `
Object {
  "data": Object {
    "partner": Object {
      "name": "Bob",
    },
    "person": Object {
      "name": "Tim",
    },
  },
}
`;

exports[`creating node with edge to node of incorrect type returns error 1`] = `
Object {
  "data": Object {
    "createPerson": null,
  },
  "errors": Array [
    [GraphQLError: Cannot create edge "partner" from "Person" to "Email", should be "Person"],
  ],
}
`;

exports[`creating node with edge to non-existent node returns error 1`] = `
Object {
  "data": Object {
    "createPerson": null,
  },
  "errors": Array [
    [GraphQLError: There is no "Person" with id "0x00"],
  ],
}
`;

exports[`deletes reverse edge to deleted node 1`] = `
Object {
  "data": Object {
    "person": Object {
      "partner": null,
    },
  },
}
`;

exports[`deletes reverse edges to deleted node 1`] = `
Object {
  "data": Object {
    "person": Object {
      "parents": Array [],
    },
  },
}
`;

exports[`deleting non-existent node returns error 1`] = `
Object {
  "data": Object {
    "deletePerson": null,
  },
  "errors": Array [
    [GraphQLError: There is no 'Person' with id '0xFFFFFFFFFFFF'],
  ],
}
`;

exports[`returns fields for created node 1`] = `
Object {
  "data": Object {
    "createPerson": Object {
      "person": Object {
        "name": "Tim",
      },
    },
  },
}
`;

exports[`returns fields on updated node 1`] = `
Object {
  "data": Object {
    "updatePerson": Object {
      "person": Object {
        "name": "Jim",
      },
    },
  },
}
`;

exports[`updates node 1`] = `
Object {
  "data": Object {
    "person": Object {
      "name": "Jim",
    },
  },
}
`;
